    $ php symfony project:enable prod

You can also specify which applications to disable in that environment:

    $ php symfony project:disable prod frontend backend
    $ php symfony project:enable prod frontend backend

These tasks are backward compatible with their previous signature:

    $ php symfony project:disable frontend prod
    $ php symfony project:enable frontend prod

Exceptions
----------

### Autoloading

When an exception is thrown during autoloading, symfony now catch them and
outputs an error to the user. That should solve some "White screen of death"
pages.

Propel
------

### `propel:insert-sql`

Before `propel:insert-sql` removes all data from a database, it asks for a
confirmation. As this task can remove data from several databases, it now also
displays the name of the connections of the related databases.

### `isPrimaryString` column attribute

You can now include an `isPrimaryString` attribute in `schema.yml` and symfony
will generate a `__toString()` method in the model class that returns the
value of that column.

    [yml]
    classes:
      Article:
        columns:
          id:     ~
          title:  { type: varchar(255), isPrimaryString: true }
          body:   { type: longvarchar }

This configuration will result in the following method in `BaseArticle`:

    [php]
    public function __toString()
    {
      return $this->getTitle();
    }

Routing
-------

### Default Requirements

The default `\d+` requirement is now only applied to a
`sfObjectRouteCollection` when the `column` option is the default `id`. This
means you no longer have to provide an alternate requirement when a
non-numeric column is specified (i.e. `slug`).

CLI
---

### Output Colorization

Symfony tries to guess if your console supports colors when you use the
symfony CLI tool. But sometimes, symfony guesses wrong; for instance when you
use Cygwin (because colorization is always turned off on the Windows
platform).
