@@ -27,6 +27,10 @@ class sfListTask extends sfCommandApplicationTask
       new sfCommandArgument('namespace', sfCommandArgument::OPTIONAL, 'The namespace name'),
     ));
 
+    $this->addOptions(array(
+      new sfCommandOption('xml', null, sfCommandOption::PARAMETER_NONE, 'To output help as XML'),
+    ));
+
     $this->briefDescription = 'Lists tasks';
 
     $this->detailedDescription = <<<EOF
@@ -37,6 +41,10 @@ The [list|INFO] task lists all tasks:
 You can also display the tasks for a specific namespace:
 
   [./symfony list test|INFO]
+
+You can also output the information as XML by using the [--xml|COMMENT] option:
+
+  [./symfony list --xml|INFO]
 EOF;
   }
 
@@ -45,9 +53,6 @@ EOF;
    */
   protected function execute($arguments = array(), $options = array())
   {
-    $this->commandApplication->help();
-    $this->log('');
-
     $tasks = array();
     foreach ($this->commandApplication->getTasks() as $name => $task)
     {
@@ -70,6 +75,21 @@ EOF;
       $tasks[$name] = $task;
     }
 
+    if ($options['xml'])
+    {
+      $this->outputAsXml($arguments['namespace'], $tasks);
+    }
+    else
+    {
+      $this->outputAsText($arguments['namespace'], $tasks);
+    }
+  }
+
+  protected function outputAsText($namespace, $tasks)
+  {
+    $this->commandApplication->help();
+    $this->log('');
+
     $width = 0;
     foreach ($tasks as $name => $task)
     {
@@ -78,9 +98,9 @@ EOF;
     $width += strlen($this->formatter->format('  ', 'INFO'));
 
     $messages = array();
-    if ($arguments['namespace'])
+    if ($namespace)
     {
-      $messages[] = $this->formatter->format(sprintf("Available tasks for the \"%s\" namespace:", $arguments['namespace']), 'COMMENT');
+      $messages[] = $this->formatter->format(sprintf("Available tasks for the \"%s\" namespace:", $namespace), 'COMMENT');
     }
     else
     {
@@ -92,7 +112,7 @@ EOF;
     $currentNamespace = '';
     foreach ($tasks as $name => $task)
     {
-      if (!$arguments['namespace'] && $currentNamespace != $task->getNamespace())
+      if (!$namespace && $currentNamespace != $task->getNamespace())
       {
         $currentNamespace = $task->getNamespace();
         $messages[] = $this->formatter->format($task->getNamespace(), 'COMMENT');
@@ -104,5 +124,54 @@ EOF;
     }
 
     $this->log($messages);
+  }
+
+  protected function outputAsXml($namespace, $tasks)
+  {
+    $dom = new DOMDocument('1.0', 'UTF-8');
+    $dom->formatOutput = true;
+    $dom->appendChild($symfonyXML = $dom->createElement('symfony'));
+
+    $symfonyXML->appendChild($tasksXML = $dom->createElement('tasks'));
+
+    if ($namespace)
+    {
+      $tasksXML->setAttribute('namespace', $namespace);
+    }
+    else
+    {
+      $symfonyXML->appendChild($namespacesXML = $dom->createElement('namespaces'));
+    }
+
+    // display tasks
+    ksort($tasks);
+    $currentNamespace = 'foobar';
+    $namespaceArrayXML = array();
+    foreach ($tasks as $name => $task)
+    {
+      if (!$namespace && $currentNamespace != $task->getNamespace())
+      {
+        $currentNamespace = $task->getNamespace();
+        $namespacesXML->appendChild($namespaceArrayXML[$task->getNamespace()] = $dom->createElement('namespace'));
+
+        $namespaceArrayXML[$task->getNamespace()]->setAttribute('id', $task->getNamespace() ? $task->getNamespace() : '_global');
+      }
+
+      if (!$namespace)
+      {
+        $namespaceArrayXML[$task->getNamespace()]->appendChild($taskXML = $dom->createElement('task'));
+        $taskXML->appendChild($dom->createTextNode($task->getName()));
+      }
+
+      $taskXML = new DOMDocument('1.0', 'UTF-8');
+      $taskXML->formatOutput = true;
+      $taskXML->loadXML($task->asXml());
+      $node = $taskXML->getElementsByTagName('task')->item(0);
+      $node = $dom->importNode($node, true);
+
+      $tasksXML->appendChild($node);
+    }
+
+    echo $dom->saveXml();
   }
 }
